Opened 12 years ago
Closed 12 years ago
#9405 closed bug (fixed)
[DriveSetup] crashes in PartitionMapAddOn::CanInitialize
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/DriveSetup | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev45206.
I have HTC Desire HD connected via usb in "Charge only" mode.
Clicking it makes DriveSetup crash.
0x78037a6c 0x567e03 __divdi3(void) + 0xaf [...] 0x78037acc 0x9cc3c61 (BMutablePartition*) + 0x79 0x78037afc 0x4777f5 BPartition::Delegate::CanInitialize(BPartition::Delegate, char*) + 0x49 0x78037b2c 0x475fd9 BPartition::CanInitialize(BPartition, char*) + 0x29 0x78037c14 0x220a40 MainWindow::_UpdateMenus(BDiskDevice*, int32, int32) + 0x460 0x78037c64 0x22056e MainWindow::_SetToDiskAndPartition(int32, int32, int32) + 0x136 0x78037ca4 0x220426 MainWindow::_AdaptToSelectedPartition() + 0x112 0x78037ce4 0x21fba2 MainWindow::MessageReceived(BMessage*) + 0x292 0x78037d14 0x3304a5 BLooper::DispatchMessage(BMessage*, BHandler*) + 0x59 0x78037f24 0x409c0c BWindow::DispatchMessage(BMessage*, BHandler*) + 0x1a94 0x78037f84 0x40dfda BWindow::task_looper() + 0x26e 0x78037fb4 0x331a01 BLooper::_task0_(void*) + 0x3d 0x78037fdc 0x571891 thread_entry + 0x21 00000000 0x78037fec ?
If I connect it in "Disk drive" mode it works ok and I can even mount fat32 partition it contains.
Maybe some error checking should be added here? http://cgit.haiku-os.org/haiku/tree/src/add-ons/disk_systems/intel/PartitionMapAddOn.cpp?id=hrev45206#n91
Attachments (3)
Change History (7)
by , 12 years ago
Attachment: | DriveSetup-6548-debug-27-01-2013-09-39-53.report added |
---|
by , 12 years ago
Attachment: | drivesetup.png added |
---|
by , 12 years ago
Attachment: | drivesetup2.png added |
---|
comment:1 by , 12 years ago
comment:3 by , 12 years ago
Thanks korli! This means that the block size is actually reported as zero. I think this should be fixed in the upper layers instead of working around this in the intel disk system add-on.
comment:4 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Should be fixed in hrev45218.
Selecting the CD-drive leads to the same crash (I run Haiku in VirtualBox and the CD Drive map to an ISO file)