BPartition::CanInitialize() now returns false if the size is 0.

* This should fix #9405; I cannot test it right now due to a missing
  CD-ROM.